Additional styling made to css. Styled Artice nad DIV after.

--- a/quizzes/css101.html
+++ b/quizzes/css101.html
@@ -96,13 +96,13 @@
       <div class="parent">
         <h4>Child of parent</h4>
         <div>
-          <div>I'm red!</div>
-          <h4>I'm red's sister
-          <div>I'm blue!</div>
-          <h4>I'm blue's brother</h4>
+          <div class="red">I'm red!</div>
+          <h4 class="background-red">I'm red's sister</h4>
+          <div class="blue">I'm blue!</div>
+          <h4 class = "background-blue">I'm blue's brother</h4>
         </div>
       </div>
-      <h4>Child of grandparent</h4>
+      <h4 class="border">Child of grandparent</h4>
     </div>
 
     <footer class="padded">
@@ -118,7 +118,7 @@
               Privacy Policy
             </span>
           </span>
-
+        </a>
       </div>
     </footer>
   </body>
