Fixed styling on child of .grandparent

--- a/quizzes/css101.html
+++ b/quizzes/css101.html
@@ -102,7 +102,7 @@
           <h4 class = "background-blue">I'm blue's brother</h4>
         </div>
       </div>
-      <h4 class="border">Child of grandparent</h4>
+      <h4>Child of grandparent</h4>
     </div>
 
     <footer class="padded">
